--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,5 +38,14 @@ services:
     ports:
       - "6432:5432"
 
+  db-test:
+    image: postgres:9
+    environment:
+      POSTGRES_PASSWORD: root
+      POSTGRES_USER: postgres
+      POSTGRES_DB: timer-test
+    ports:
+      - "7432:5432"
+
 networks:
   application:
