--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,18 @@ services:
   #   volumes:
   #     - ./apps/client:/app
 
+  phoenix:
+    build:
+      context: ./docker/phoenix
+    entrypoint: /app/entrypoint.sh
+    ports:
+      - "4000:4000"
+    networks:
+      - application
+    volumes:
+      - ./apps/api:/app
+    working_dir: /app
+
   db:
     image: postgres:9
     environment:
@@ -37,6 +49,8 @@ services:
       POSTGRES_DB: timer
     ports:
       - "6432:5432"
+    networks:
+      - application
 
   db-test:
     image: postgres:9
@@ -46,6 +60,8 @@ services:
       POSTGRES_DB: timer-test
     ports:
       - "7432:5432"
+    networks:
+      - application
 
 networks:
   application:
