--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -22,6 +22,7 @@
     "@types/history": "^4.6.2",
     "@types/lodash": "^4.14.104",
     "@types/moment": "^2.13.0",
+    "@types/phoenix": "^0.0.4",
     "@types/prop-types": "^15.5.1",
     "@types/query-string": "^5.0.0",
     "@types/react": "^16.0.0",
@@ -38,6 +39,7 @@
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "moment": "^2.21.0",
+    "phoenix": "^1.3.0",
     "query-string": "^6.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
