--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -48,6 +48,7 @@
     "regenerator-runtime": "^0.10.5",
     "style-loader": "^0.17.0",
     "styled-components": "^3.1.6",
+    "styled-components-ts": "^0.0.8",
     "ts-loader": "^2.3.2",
     "tslint": "^5.9.1",
     "tslint-config-airbnb": "^5.7.0",
