--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,7 @@ services:
       - "6432:5432"
     networks:
       - application
+    # TODO: Set up a volume for this to persist DB across downs/ups
 
   db-test:
     image: postgres:9
