Resolve yarn conflicts

--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -9,6 +9,7 @@
         "allowJs": true,
         "allowSyntheticDefaultImports": true,
         "baseUrl": "./src/",
-        "noEmit": false
+        "noEmit": false,
+        "keyofStringsOnly": true
     }
 }
