--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -29,7 +29,7 @@
     "@types/react-dom": "^16.0.3",
     "@types/react-hot-loader": "^3.0.3",
     "@types/react-router": "^4.0.22",
-    "@types/react-router-dom": "^4.0.7",
+    "@types/react-router-dom": "4.2.6",
     "@types/react-transition-group": "^2.0.7",
     "@types/redux": "^3.6.0",
     "@types/redux-devtools": "^3.0.43",
@@ -47,13 +47,13 @@
     "react-router-dom": "^4.1.2",
     "regenerator-runtime": "^0.10.5",
     "style-loader": "^0.17.0",
-    "styled-components": "^3.1.6",
+    "styled-components": "3.3.0",
     "styled-components-ts": "^0.0.8",
     "ts-loader": "^2.3.2",
     "tslint": "^5.9.1",
     "tslint-config-airbnb": "^5.7.0",
     "tslint-react": "^3.5.1",
-    "typescript": "^2.4.2",
+    "typescript": "^3.0.0",
     "typescript-loader": "^1.1.3",
     "url": "^0.11.0",
     "url-loader": "^0.5.8",
