--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -27,6 +27,7 @@
     "@types/query-string": "^5.0.0",
     "@types/react": "^16.0.0",
     "@types/react-dom": "^16.0.3",
+    "@types/react-fontawesome": "^1.6.4",
     "@types/react-hot-loader": "^3.0.3",
     "@types/react-router": "^4.0.22",
     "@types/react-router-dom": "4.2.6",
