--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       VIRTUAL_PORT: 7000
     volumes:
       - ./apps/client:/app
+      - /app/node_modules
 
   phoenix:
     build:
@@ -45,12 +46,15 @@ services:
     environment:
       VIRTUAL_HOST: api.timer.test
       VIRTUAL_PORT: 4000
+      DB_HOST: db
+      DB_PORT: 5432
     ports:
       - "4000:4000"
     networks:
       - application
     volumes:
       - ./apps/api:/app
+      - /app/deps
     working_dir: /app
 
   db:
