--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -19,6 +19,9 @@
     ]
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/react-fontawesome": "^0.1.0-11",
     "@types/history": "^4.6.2",
     "@types/lodash": "^4.14.104",
     "@types/moment": "^2.13.0",
@@ -34,12 +37,14 @@
     "@types/react-transition-group": "^2.0.7",
     "@types/redux": "^3.6.0",
     "@types/redux-devtools": "^3.0.43",
+    "bootstrap": "^4.1.3",
     "css-loader": "^0.28.1",
     "faker": "^4.1.0",
     "file-loader": "^1.1.6",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "moment": "^2.21.0",
+    "node-sass": "^4.9.2",
     "phoenix": "^1.3.0",
     "query-string": "^6.0.0",
     "react": "^16.2.0",
@@ -61,6 +66,7 @@
     "webpack": "^3.4.1"
   },
   "devDependencies": {
+    "sass-loader": "^7.1.0",
     "webpack-dev-server": "^2.6.1"
   }
 }
