--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -2,7 +2,7 @@
   "name": "phoenix-timer",
   "version": "0.0.1",
   "scripts": {
-    "dev": "webpack-dev-server",
+    "dev": "webpack-dev-server --hot",
     "build": "webpack",
     "build:test": "webpack",
     "tslint": "tslint --format stylish src/**/*.ts{,x}",
@@ -38,20 +38,32 @@
     "@types/react-transition-group": "^2.0.7",
     "@types/redux": "^3.6.0",
     "@types/redux-devtools": "^3.0.43",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-react-hot-loader": "^3.0.0-beta.6",
+    "babel-plugin-transform-async-functions": "^6.22.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "bootstrap": "^4.1.3",
     "css-loader": "^0.28.1",
     "faker": "^4.1.0",
     "file-loader": "^1.1.6",
     "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "^3.0.0",
     "moment": "^2.21.0",
     "node-sass": "^4.9.2",
     "phoenix": "^1.3.0",
+    "prop-types": "^15.6.2",
     "query-string": "^6.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-hot-loader": "next",
-    "react-router-dom": "^4.1.2",
+    "react-hot-loader": "^4.3.5",
+    "react-router-dom": "^4.3.1",
     "regenerator-runtime": "^0.10.5",
     "style-loader": "^0.17.0",
     "styled-components": "3.3.0",
@@ -64,10 +76,11 @@
     "typescript-loader": "^1.1.3",
     "url": "^0.11.0",
     "url-loader": "^0.5.8",
-    "webpack": "^3.4.1"
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.6"
   },
   "devDependencies": {
-    "sass-loader": "^7.1.0",
-    "webpack-dev-server": "^2.6.1"
+    "sass-loader": "^7.1.0"
   }
 }
