--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -63,7 +63,9 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.3.5",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.10.5",
     "style-loader": "^0.17.0",
     "styled-components": "3.3.0",
