--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -65,6 +65,7 @@
     "react-hot-loader": "^4.3.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.10.5",
     "style-loader": "^0.17.0",
